--- a/attendance.html
+++ b/attendance.html
@@ -329,7 +329,7 @@
 <script>
   // ── CONFIG ─────────────────────────────────────────────────
   // IMPORTANT: Replace this with your NEW Apps Script deployment URL
-  const API = 'YOUR_APPS_SCRIPT_URL_HERE';
+  const API = 'https://script.google.com/macros/s/AKfycbwt4msAWY0smH43-_WY2fwtjDE922NUK3-BmlhBRBXBUHPMwj-aE4sWD682nHruCYTT/exec';
 
   // ── STATE ──────────────────────────────────────────────────
   let isTeacher       = false;
