--- a/attendance.html
+++ b/attendance.html
@@ -329,7 +329,7 @@
 <script>
   // ── CONFIG ─────────────────────────────────────────────────
   // IMPORTANT: Replace this with your NEW Apps Script deployment URL
-  const API = 'https://script.google.com/macros/s/AKfycbwt4msAWY0smH43-_WY2fwtjDE922NUK3-BmlhBRBXBUHPMwj-aE4sWD682nHruCYTT/exec';
+  const API = 'YOUR_APPS_SCRIPT_URL_HERE';
 
   // ── STATE ──────────────────────────────────────────────────
   let isTeacher       = false;
@@ -344,20 +344,26 @@
   // Restore session
   if (savedUser && savedPass) verifyLogin(savedUser, savedPass, true);
 
-  // ── API HELPERS ────────────────────────────────────────────
-  async function apiGet(params) {
-    const url = API + '?' + new URLSearchParams(params);
-    const res = await fetch(url);
-    return res.json();
+  // ── API HELPERS (JSONP to bypass CORS) ─────────────────────
+  function apiGet(params) {
+    return new Promise((resolve, reject) => {
+      const cb = 'cb_' + Date.now();
+      params.callback = cb;
+      const url = API + '?' + new URLSearchParams(params);
+      const script = document.createElement('script');
+      const timer = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 15000);
+      function cleanup() { delete window[cb]; document.body.removeChild(script); clearTimeout(timer); }
+      window[cb] = (data) => { cleanup(); resolve(data); };
+      script.onerror = () => { cleanup(); reject(new Error('Network error')); };
+      script.src = url;
+      document.body.appendChild(script);
+    });
   }
 
-  async function apiPost(body) {
-    const res = await fetch(API, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(body)
-    });
-    return res.json();
+  function apiPost(body) {
+    // For POST we use GET with action param + encoded body (Apps Script handles both)
+    const params = { ...body };
+    return apiGet(params);
   }
 
   // ── LOGIN ──────────────────────────────────────────────────
