--- a/attendance.html
+++ b/attendance.html
@@ -329,7 +329,7 @@
 <script>
   // ── CONFIG ─────────────────────────────────────────────────
   // IMPORTANT: Replace this with your NEW Apps Script deployment URL
-  const API = 'YOUR_APPS_SCRIPT_URL_HERE';
+  const API = 'https://script.google.com/macros/s/AKfycbxHaOK1WSG5hVVrzOUwGI3QxY3eSbjaAseRVxVaMXU-b8k9Stn4exUUbvB56dYbKLfr/exec';
 
   // ── STATE ──────────────────────────────────────────────────
   let isTeacher       = false;
