--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
     <div class="section-label">Documents & Files</div>
     <div class="section-title">Class Resources</div>
     <div class="card-grid">
-      <a href="#" class="card">
+      <a href="lessons.html" class="card">
         <div class="card-icon ic-purple">📑</div>
         <div class="card-name">Lesson Materials</div>
         <div class="card-desc">PPT & handouts</div>
