--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         <div class="card-name">Attendance</div>
         <div class="card-desc">Student presence log</div>
       </a>
-      <a href="#" class="card">
+      <a href="scores.html" class="card">
         <div class="card-icon ic-orange">🏆</div>
         <div class="card-name">Student Scores</div>
         <div class="card-desc">Grades & assessments</div>
