--- a/scores.html
+++ b/scores.html
@@ -206,7 +206,7 @@
 
 <script>
   // ── IMPORTANT: Replace with your Scores Apps Script deployment URL ──
-  const API = 'YOUR_SCORES_API_URL_HERE';
+  const API = 'https://script.google.com/macros/s/AKfycbxBTC4vnFB3A73QwThdRxrUruvUNZRlpwwLFBjt5C0cJGIh8wz461ZCn3b9Y6wWPpyAGg/exec';
 
   let studentsCache = {};
 
