--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         <div class="card-name">Lesson Materials</div>
         <div class="card-desc">PPT & handouts</div>
       </a>
-      <a href="#" class="card">
+      <a href="assignments.html" class="card">
         <div class="card-icon ic-blue">📋</div>
         <div class="card-name">Assignments</div>
         <div class="card-desc">Task sheets & rubrics</div>
