--- a/scores.html
+++ b/scores.html
@@ -13,7 +13,8 @@
       --text-dark: #1E1040; --text-muted: #6B5B95; --border: #E5DEFF;
       --accent: #F59E0B; --green: #10B981; --red: #EF4444;
     }
-    body { font-family: 'IBM Plex Sans', sans-serif; background: var(--off-white); color: var(--text-dark); min-height: 100vh; font-size: 16px; }
+    body { font-family: 'IBM Plex Sans', sans-serif; background: var(--off-white); color: var(--text-dark); min-height: 100vh; font-size: 16px; display: flex; flex-direction: column; }
+    main { flex: 1; }
 
     /* HEADER */
     header {
@@ -215,14 +216,27 @@
     return new Promise((resolve, reject) => {
       const cb = 'cb_' + Date.now() + '_' + Math.random().toString(36).slice(2);
       params.callback = cb;
+      // Add cache-busting to avoid mobile browser caching issues
+      params._t = Date.now();
       const url    = API + '?' + new URLSearchParams(params);
       const script = document.createElement('script');
-      const timer  = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 15000);
-      function cleanup() { delete window[cb]; if (document.body.contains(script)) document.body.removeChild(script); clearTimeout(timer); }
-      window[cb]      = data => { cleanup(); resolve(data); };
-      script.onerror  = ()   => { cleanup(); reject(new Error('Network error')); };
-      script.src      = url;
-      document.body.appendChild(script);
+      script.type  = 'text/javascript';
+      script.async = true;
+      // Longer timeout for mobile networks
+      const timer  = setTimeout(() => { cleanup(); reject(new Error('Timeout — check your connection')); }, 20000);
+      function cleanup() {
+        delete window[cb];
+        try { if (script.parentNode) script.parentNode.removeChild(script); } catch(e) {}
+        clearTimeout(timer);
+      }
+      window[cb]     = data => { cleanup(); resolve(data); };
+      script.onerror = ()   => {
+        cleanup();
+        // Try once more with no-cache header workaround
+        reject(new Error('Network error — try again'));
+      };
+      script.src = url;
+      (document.head || document.body).appendChild(script);
     });
   }
 
@@ -256,7 +270,13 @@
       });
       nameSelect.disabled = false;
       nameSelect.onchange = () => { viewBtn.disabled = !nameSelect.value; };
-    } catch(e) { showToast('Failed to load students', 'err'); nameSelect.innerHTML = '<option>— Select class first —</option>'; }
+    } catch(e) {
+      showToast('Failed to load — tap to retry', 'err');
+      nameSelect.innerHTML = '<option>— Select class first —</option>';
+      nameSelect.disabled = true;
+      // Auto retry once after 2 seconds
+      setTimeout(() => { if (document.getElementById('classSelect').value === cls) onClassChange(); }, 2000);
+    }
   }
 
   // ── VIEW SCORE ─────────────────────────────────────────────
