--- a/scores.html
+++ b/scores.html
@@ -13,8 +13,8 @@
       --text-dark: #1E1040; --text-muted: #6B5B95; --border: #E5DEFF;
       --accent: #F59E0B; --green: #10B981; --red: #EF4444;
     }
-    body { font-family: 'IBM Plex Sans', sans-serif; background: var(--off-white); color: var(--text-dark); min-height: 100vh; font-size: 16px; display: flex; flex-direction: column; }
-    main { flex: 1; }
+    body { font-family: 'IBM Plex Sans', sans-serif; background: var(--off-white); color: var(--text-dark); min-height: 100vh; font-size: 16px; }
+    main { min-height: calc(100vh - 280px); }
 
     /* HEADER */
     header {
@@ -212,30 +212,34 @@
   let studentsCache = {};
 
   // ── JSONP helper ───────────────────────────────────────────
-  function apiGet(params) {
+  // Try fetch first, fall back to JSONP for mobile compatibility
+  async function apiGet(params) {
+    const url = API + '?' + new URLSearchParams(params);
+    // Try fetch with cors first (works on desktop & some mobile)
+    try {
+      const res = await fetch(url, { method: 'GET' });
+      if (res.ok) {
+        const data = await res.json();
+        return data;
+      }
+    } catch(e) { /* fall through to JSONP */ }
+
+    // JSONP fallback for mobile
     return new Promise((resolve, reject) => {
       const cb = 'cb_' + Date.now() + '_' + Math.random().toString(36).slice(2);
-      params.callback = cb;
-      // Add cache-busting to avoid mobile browser caching issues
-      params._t = Date.now();
-      const url    = API + '?' + new URLSearchParams(params);
-      const script = document.createElement('script');
-      script.type  = 'text/javascript';
-      script.async = true;
-      // Longer timeout for mobile networks
-      const timer  = setTimeout(() => { cleanup(); reject(new Error('Timeout — check your connection')); }, 20000);
+      const p  = { ...params, callback: cb, _t: Date.now() };
+      const jsonpUrl = API + '?' + new URLSearchParams(p);
+      const script   = document.createElement('script');
+      script.async   = true;
+      const timer    = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 20000);
       function cleanup() {
         delete window[cb];
         try { if (script.parentNode) script.parentNode.removeChild(script); } catch(e) {}
         clearTimeout(timer);
       }
       window[cb]     = data => { cleanup(); resolve(data); };
-      script.onerror = ()   => {
-        cleanup();
-        // Try once more with no-cache header workaround
-        reject(new Error('Network error — try again'));
-      };
-      script.src = url;
+      script.onerror = ()   => { cleanup(); reject(new Error('Failed to load')); };
+      script.src     = jsonpUrl;
       (document.head || document.body).appendChild(script);
     });
   }
