--- a/index.html
+++ b/index.html
@@ -511,6 +511,11 @@
         <div class="card-name">Student Scores</div>
         <div class="card-desc">Grades & assessments</div>
       </a>
+      <a href="tasks.html" class="card">
+        <div class="card-icon ic-green">✅</div>
+        <div class="card-name">Task Status</div>
+        <div class="card-desc">Check your submissions</div>
+      </a>
 
     </div>
   </div>
