--- a/index.html
+++ b/index.html
@@ -516,6 +516,11 @@
         <div class="card-name">Task Status</div>
         <div class="card-desc">Check your submissions</div>
       </a>
+      <a href="activeness.html" class="card">
+        <div class="card-icon ic-yellow">⚡</div>
+        <div class="card-name">Activeness</div>
+        <div class="card-desc">Class participation log</div>
+      </a>
 
     </div>
   </div>
