--- a/students.html
+++ b/students.html
@@ -254,6 +254,55 @@
       .controls { flex-direction: column; }
       .filter-select, .search-wrap { width: 100%; }
     }
+
+    /* ── ACTIVENESS MODAL ── */
+    .act-overlay { position: fixed; inset: 0; background: rgba(15,10,40,0.75); backdrop-filter: blur(8px); z-index: 100; display: flex; align-items: flex-end; justify-content: center; padding: 0; }
+    .act-overlay.hidden { display: none; }
+    .act-sheet {
+      background: #1A1230; border-radius: 28px 28px 0 0; width: 100%; max-width: 500px;
+      padding: 0 0 32px; animation: slideUp 0.3s cubic-bezier(0.34,1.56,0.64,1);
+      border: 1px solid #2E2250; border-bottom: none;
+    }
+    @keyframes slideUp { from { transform: translateY(100%); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
+    .act-sheet-handle { width: 40px; height: 4px; background: #3D2E6B; border-radius: 999px; margin: 12px auto 0; }
+    .act-sheet-head { padding: 20px 24px 16px; border-bottom: 1px solid #2E2250; display: flex; align-items: center; gap: 14px; }
+    .act-avatar { width: 46px; height: 46px; border-radius: 50%; background: linear-gradient(135deg, #7C3AED, #5B21B6); display: flex; align-items: center; justify-content: center; font-size: 1.2rem; font-weight: 800; color: #fff; flex-shrink: 0; font-family: 'Playfair Display', serif; }
+    .act-sheet-name { font-family: 'Playfair Display', serif; font-size: 1.1rem; font-weight: 700; color: #F1EEFF; line-height: 1.2; }
+    .act-sheet-sub { font-size: 0.78rem; color: #7C6FA0; margin-top: 2px; }
+    .act-close { margin-left: auto; width: 32px; height: 32px; border-radius: 50%; background: #241A3A; border: 1px solid #2E2250; color: #7C6FA0; cursor: pointer; font-size: 1rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
+    .act-close:hover { color: #F1EEFF; }
+
+    /* Progress bar */
+    .act-progress { padding: 16px 24px; border-bottom: 1px solid #2E2250; }
+    .act-prog-row { display: flex; justify-content: space-between; margin-bottom: 8px; }
+    .act-prog-label { font-size: 0.78rem; color: #7C6FA0; font-weight: 600; text-transform: uppercase; letter-spacing: 0.06em; }
+    .act-prog-count { font-size: 0.88rem; font-weight: 700; color: #A78BFA; }
+    .act-bar-wrap { background: #241A3A; border-radius: 999px; height: 8px; overflow: hidden; }
+    .act-bar-fill { height: 8px; border-radius: 999px; background: linear-gradient(90deg, #8B5CF6, #A78BFA); transition: width 0.7s ease; }
+
+    /* Stat items */
+    .act-stats { padding: 16px 24px 0; display: flex; flex-direction: column; gap: 10px; }
+    .act-stat-row { display: flex; align-items: center; gap: 12px; }
+    .act-stat-dot { width: 10px; height: 10px; border-radius: 50%; flex-shrink: 0; }
+    .act-stat-label { font-size: 0.85rem; color: #A79FC0; flex: 1; }
+    .act-stat-bar-wrap { width: 90px; background: #241A3A; border-radius: 999px; height: 6px; overflow: hidden; }
+    .act-stat-bar { height: 6px; border-radius: 999px; transition: width 0.6s ease; }
+    .act-stat-val { font-size: 0.88rem; font-weight: 700; color: #F1EEFF; min-width: 24px; text-align: right; font-family: 'IBM Plex Mono', monospace; }
+
+    /* Indicator badge */
+    .act-indicator { margin: 16px 24px 0; padding: 10px 16px; border-radius: 12px; font-size: 0.82rem; font-weight: 700; text-align: center; }
+    .ind-super  { background: rgba(16,185,129,0.15); color: #10B981; border: 1px solid rgba(16,185,129,0.3); }
+    .ind-active { background: rgba(139,92,246,0.15); color: #A78BFA; border: 1px solid rgba(139,92,246,0.3); }
+    .ind-okay   { background: rgba(245,158,11,0.15); color: #F59E0B; border: 1px solid rgba(245,158,11,0.3); }
+    .ind-not    { background: rgba(239,68,68,0.1);   color: #EF4444; border: 1px solid rgba(239,68,68,0.2); }
+
+    .act-loading { text-align: center; padding: 40px; color: #7C6FA0; font-size: 0.9rem; }
+    .act-spinner { display: inline-block; width: 22px; height: 22px; border: 2px solid #2E2250; border-top-color: #8B5CF6; border-radius: 50%; animation: spin 0.8s linear infinite; margin-bottom: 10px; }
+    @keyframes spin { to { transform: rotate(360deg); } }
+    .student-item { cursor: pointer; }
+    .student-item .student-name::after { content: ' ›'; font-size: 0.75rem; color: var(--purple-light); opacity: 0; transition: opacity 0.15s; }
+    .student-item:hover .student-name::after { opacity: 1; }
+
   </style>
 </head>
 <body>
@@ -409,6 +458,7 @@ classes.forEach(cls => {
       <span class="student-dot"></span>
       <span class="student-name">${name}</span>
     `;
+    item.addEventListener('click', () => openActModal(name, cls));
     list.appendChild(item);
   });
   document.getElementById('count-' + cls).textContent = students.length + ' students';
@@ -449,7 +499,125 @@ function updateCount(n) {
   const total = n !== undefined ? n : Object.values(data).reduce((a, b) => a + b.length, 0);
   document.getElementById('countBadge').textContent = total + ' students';
 }
+
+
+// ── ACTIVENESS STATS ──────────────────────────────────────────
+const SCORES_API = 'https://script.google.com/macros/s/AKfycbxBTC4vnFB3A73QwThdRxrUruvUNZRlpwwLFBjt5C0cJGIh8wz461ZCn3b9Y6wWPpyAGg/exec';
+const activenessCache = {};
+
+const ACTS = [
+  { key: 'VocabularyBox',    label: 'Vocabulary Box',    color: '#8B5CF6' },
+  { key: 'Answering',        label: 'Answering',         color: '#3B82F6' },
+  { key: 'Presenting',       label: 'Presenting',        color: '#10B981' },
+  { key: 'DoingTaskOnTime',  label: 'Doing Task On Time',color: '#F59E0B' },
+  { key: 'HelpingHand',      label: 'Helping Hand',      color: '#EC4899' },
+];
+
+// Class key mapping: XE-1 → XE1 for API
+function toApiClass(cls) { return cls.replace('-', ''); }
+
+async function apiGet(params) {
+  const url = SCORES_API + '?' + new URLSearchParams(params);
+  try { const res = await fetch(url); if (res.ok) return await res.json(); } catch(e) {}
+  return new Promise((resolve, reject) => {
+    const cb = 'cb_' + Date.now() + '_' + Math.random().toString(36).slice(2);
+    const p  = { ...params, callback: cb, _t: Date.now() };
+    const script = document.createElement('script');
+    script.async = true;
+    const timer = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 20000);
+    function cleanup() { delete window[cb]; try { if (script.parentNode) script.parentNode.removeChild(script); } catch(e){} clearTimeout(timer); }
+    window[cb]     = d => { cleanup(); resolve(d); };
+    script.onerror = () => { cleanup(); reject(new Error('Network error')); };
+    script.src = SCORES_API + '?' + new URLSearchParams(p);
+    (document.head || document.body).appendChild(script);
+  });
+}
+
+async function openActModal(name, cls) {
+  const apiCls = toApiClass(cls);
+  document.getElementById('actName').textContent    = name;
+  document.getElementById('actSub').textContent     = cls + ' · Activeness Stats';
+  document.getElementById('actAvatar').textContent  = name[0].toUpperCase();
+  document.getElementById('actBody').innerHTML      = '<div class="act-loading"><div class="act-spinner"></div><br/>Loading stats...</div>';
+  document.getElementById('actOverlay').classList.remove('hidden');
+  document.body.style.overflow = 'hidden';
+
+  try {
+    // Use cache per class
+    let classData = activenessCache[apiCls];
+    if (!classData) {
+      classData = await apiGet({ action: 'getAllActiveness', className: apiCls });
+      if (!classData.error) activenessCache[apiCls] = classData;
+    }
+    if (classData.error) { document.getElementById('actBody').innerHTML = '<div class="act-loading">Could not load stats.</div>'; return; }
+
+    // Find student by name (case-insensitive)
+    const student = classData.students.find(s => s.name.toLowerCase() === name.toLowerCase());
+    if (!student) { document.getElementById('actBody').innerHTML = '<div class="act-loading">Student stats not found.</div>'; return; }
+
+    // Update avatar with nickname if available
+    if (student.nickname) document.getElementById('actAvatar').textContent = student.nickname[0].toUpperCase();
+
+    const total   = (student.VocabularyBox||0) + (student.Answering||0) + (student.Presenting||0) + (student.DoingTaskOnTime||0) + (student.HelpingHand||0);
+    const maxVal  = Math.max(...ACTS.map(a => student[a.key] || 0), 1);
+    const indClass = student.Indicator.includes('Super') ? 'ind-super' : student.Indicator.includes('Active (+') && !student.Indicator.includes('Not') ? 'ind-active' : student.Indicator.includes('Okay') ? 'ind-okay' : 'ind-not';
+    const barPct  = Math.min(100, Math.round((total / 50) * 100)); // 50 = rough max
+
+    const statsHtml = ACTS.map(a => {
+      const val = student[a.key] || 0;
+      const pct = maxVal > 0 ? Math.round((val / maxVal) * 100) : 0;
+      return `<div class="act-stat-row">
+        <div class="act-stat-dot" style="background:${a.color}"></div>
+        <div class="act-stat-label">${a.label}</div>
+        <div class="act-stat-bar-wrap"><div class="act-stat-bar" style="width:${pct}%;background:${a.color}"></div></div>
+        <div class="act-stat-val">${val}</div>
+      </div>`;
+    }).join('');
+
+    document.getElementById('actBody').innerHTML = `
+      <div class="act-progress">
+        <div class="act-prog-row">
+          <div class="act-prog-label">Total Points</div>
+          <div class="act-prog-count">${total} pts</div>
+        </div>
+        <div class="act-bar-wrap"><div class="act-bar-fill" style="width:${barPct}%"></div></div>
+      </div>
+      <div class="act-stats">${statsHtml}</div>
+      <div class="act-indicator ${indClass}">${student.Indicator || '—'}</div>`;
+
+  } catch(e) {
+    document.getElementById('actBody').innerHTML = '<div class="act-loading">Failed to load stats.</div>';
+  }
+}
+
+function closeActModal(e) {
+  if (e && e.target !== document.getElementById('actOverlay')) return;
+  document.getElementById('actOverlay').classList.add('hidden');
+  document.body.style.overflow = '';
+}
+
+document.addEventListener('keydown', e => { if (e.key === 'Escape') { document.getElementById('actOverlay').classList.add('hidden'); document.body.style.overflow = ''; } });
+
 </script>
+
+
+<!-- ACTIVENESS STATS MODAL -->
+<div class="act-overlay hidden" id="actOverlay" onclick="closeActModal(event)">
+  <div class="act-sheet" id="actSheet">
+    <div class="act-sheet-handle"></div>
+    <div class="act-sheet-head">
+      <div class="act-avatar" id="actAvatar">?</div>
+      <div>
+        <div class="act-sheet-name" id="actName">—</div>
+        <div class="act-sheet-sub" id="actSub">—</div>
+      </div>
+      <button class="act-close" onclick="closeActModal()">✕</button>
+    </div>
+    <div id="actBody">
+      <div class="act-loading"><div class="act-spinner"></div><br/>Loading stats...</div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
